# contrast-maximization-for-event-cameras

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: packages.cmake
config/: draw_viewpoint.json
include/: dvs_cm.hpp  dvs_utils.hpp  events_visualizer.hpp
launch/: cm_rotation_3d.launch  cm_translation_2d.launch
rviz_cfg/: cm_rotation_3d.rviz
src/: cm_rotation_3d.cpp  cm_translation_2d.cpp
